@@ -66,6 +66,8 @@ The changes are:
 - Prevent nested part to be rendered as border nodes in the Interconnection View diagram.
 - Fix an issue where a click on inherited members inside compartments was raising an error instead of displaying the palette.
 - Fix an issue where non-containment references in standard libraries weren't correctly imported into the project's editing context.
+- Remove owning Usage memberships from inherited memberships of Usages.
+Memberships of a Type are inherited via _Specialization_ or _Conjugation_, not by composition.
 
 
 == Improvements
